<resources>
    <string name="app_name">MiAppJanier</string>
    <string name="Fruits">Frutas</string>
    <string name="Next">Aprender</string>
    <string name="Menu">Menú</string>
    <string name="MyApp">Bienvenido a mi app</string>
    <string name="Colors">Colores</string>
    <string name="Animals">Animales</string>
    <string name="Numbers">Números</string>
    <string name="One">Tres</string>
    <string name="Two">Dos</string>
    <string name="Three">Uno</string>
    <string name="Five">Cinco</string>
    <string name="Six">Seis</string>
    <string name="Seven">Siete</string>
    <string name="Eight">Ocho</string>
    <string name="Nine">Nueve</string>
    <string name="red">Rojo</string>
    <string name="white">Blanco</string>
    <string name="Animal">Tigre</string>
    <string name="Animal1">Cocodrilo</string>
    <string name="Animal2">Flamenco</string>
    <string name="Fruit1">Manzana</string>
    <string name="Fruit2">Naranja</string>
    <string name="Fruit3">Durazno</string>
    <string name="Black">Negro</string>
    <string name="Four">Cuatro</string>
    <string name="play">Jugar</string>
    <string name="Register">Registrarse</string>
    <string name="Registro">Ingrese sus datos</string>
    <string name="Nombre">Ingrese su nombre</string>
    <string name="Apellido">Ingrese su apellido</string>
    <string name="GeneroF">F</string>
    <string name="GeneroM">M</string>
    <string name="edad">Edad</string>
    <string name="quest">¿Cual es la fruta que se pronuncia como "Apple"?</string>
    <string name="quest1">¿Cual es el animal que se pronuncia como "Flamingo"?</string>
    <string name="quest2">¿Cual es la fruta que se pronuncia como "Peach"?</string>
    <string name="quest3">¿Cual es el color que se pronuncia como "red"?</string>
    <string name="quest4">¿Cual es el Numero que se pronuncia como "Four"?</string>
    <string-array name="colegios">
        <item>Colegio 1</item>
        <item>Colegio 2</item>
        <item>Colegio 3</item>
        <item>Colegio 3</item>
        <item>Colegio 4</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>