<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@color/blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuApp">

    <ImageView
        android:layout_width="535dp"
        android:layout_height="386dp"
        android:layout_gravity="center"
        android:src="@drawable/ingles" />
    <Button
        android:onClick="irColores"
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/Colors"
        android:backgroundTint="@color/Green"
        android:layout_marginTop="40dp" />
    <Button
        android:onClick="irAnimales"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/Animals"
        android:backgroundTint="@color/Green"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>
    <Button
        android:onClick="irNumeros"
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/Green"
        android:layout_height="wrap_content"
        android:text="@string/Numbers"
        android:layout_marginTop="5dp"/>
    <Button
        android:onClick="irFrutas"
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/Green"
        android:layout_height="wrap_content"
        android:text="@string/Fruits"
        android:layout_marginTop="5dp"/>
</LinearLayout>