<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/blue"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="318dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/MyApp"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <ImageView
        android:layout_width="285dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ingles" />

    <Button
        android:onClick="irMenu"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/Green"
        android:text="@string/Next"
        android:layout_gravity="center"
        android:layout_marginTop="34dp"/>

    <Button
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/orange"
        android:onClick="Jugar"
        android:text="@string/play" />

</LinearLayout>