<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Register">
    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/Registro"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="40sp"/>
    <EditText
        android:id="@+id/nombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Ingrese su nombre"
        android:padding="12dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@color/white"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/apodo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Ingrese su apodo"
        android:padding="12dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@color/white"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/edad"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="edad"
        android:padding="12dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@color/white"
        android:inputType="number"/>
    <Spinner
        android:id="@+id/spnColegios"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:entries="@array/colegios"/>
    <RadioGroup
        android:id="@+id/rgGenero"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <RadioButton
            android:id="@+id/RdFemenino"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_height="wrap_content"
            android:text="@string/GeneroF"/>
        <RadioButton
            android:id="@+id/RdMasculino"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:text="@string/GeneroM"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/Register"/>

</LinearLayout>